z-index fix

--- a/src/prod/components/App/App.style.scss
+++ b/src/prod/components/App/App.style.scss
@@ -50,6 +50,7 @@ button {
 	}
 
 	&__sidebar {
+		z-index: 1;
 		grid-area: sidebar;
 
 		&__button {
@@ -58,6 +59,7 @@ button {
 	}
 
 	&__toolbar {
+		z-index: 1;
 		grid-area: toolbar;
 		display: flex;
 		font-size: 16px;
@@ -82,5 +84,6 @@ button {
 	&__timeline {
 		grid-area: timeline;
 		transition: font-size 0.3s;
+		z-index: 0;
 	}
 }
